--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "tehc-theme",
+    "publisher": "hakancangunerli",
     "displayName": "Tehc",
     "description": "thec theme for buzz",
     "version": "0.0.1",
